--- a/src/Client/Pages/Index.razor
+++ b/src/Client/Pages/Index.razor
@@ -1,9 +1,6 @@
 ﻿@page "/"
+@layout HomePageLayout
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<REA.Accounting.Client.Components.Common.Home />
