--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -6,5 +6,15 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
+@using Blazorise
+@using Blazorise.Components
+@using Blazorise.DataGrid
+@using Blazorise.Icons.FontAwesome
+@using Blazorise.Snackbar
+@using Fluxor
+@using Fluxor.Blazor.Web.Components
+
 @using REA.Accounting.Client
+@using ReaAccountingSys.Client.Components.Common
 @using REA.Accounting.Client.Shared
