--- a/src/Client/Shared/CompanyViewMenu.razor
+++ b/src/Client/Shared/CompanyViewMenu.razor
@@ -5,13 +5,13 @@
     <BarMenu>
         <BarStart>
             <BarItem>
-                <BarLink To="Company/Pages/CompanyStartPage">Company</BarLink>
+                <BarLink To="UseCases/Organization/GetCompanyDetails/Pages/CompanyStartPage">Company</BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="Company/Pages/CompanyStartPage">Shifts</BarLink>
+                <BarLink To="UseCases/Organization/GetCompanyDetails/Pages/CompanyStartPage">Departments</BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="Company/Pages/CompanyStartPage">Shifts</BarLink>
+                <BarLink To="UseCases/Organization/GetCompanyDetails/Pages/CompanyStartPage">Shifts</BarLink>
             </BarItem>
         </BarStart>
         <BarEnd>
