--- a/src/Client/UseCases/HumanResources/Pages/WorkersStartPage.razor
+++ b/src/Client/UseCases/HumanResources/Pages/WorkersStartPage.razor
@@ -1,10 +1,10 @@
-@page "/Company/Pages/CompanyStartPage"
+@page "/UseCases/HumanResources/Pages/WorkersStartPage"
 
 <PageTitle>Company</PageTitle>
 
 <Row TextAlignment=TextAlignment.Center Margin="Margin.Is3.FromTop">
     <Heading Size="HeadingSize.Is5">
-        AdventureWorks Cycles, Company
+        AdventureWorks Cycles, Workers
     </Heading>
 </Row>
 
