Reorganized namespaces around use cases

--- a/src/Client/UseCases/Home/HomePageLayout.razor
+++ b/src/Client/UseCases/Home/HomePageLayout.razor
@@ -1,8 +1,9 @@
+@* @inherits LayoutComponentBase *@
 @inherits Fluxor.Blazor.Web.Components.FluxorLayout
-@layout BlazoriseLayout
+@layout MainLayout
 
 <LayoutHeader Fixed>
-    <WorkersViewMenu />
+    <HomePageMenu />
 </LayoutHeader>
 <LayoutContent>
     @Body
