--- a/src/Client/UseCases/HumanResources/WorkersLayout.razor
+++ b/src/Client/UseCases/HumanResources/WorkersLayout.razor
@@ -1,8 +1,8 @@
 @inherits Fluxor.Blazor.Web.Components.FluxorLayout
-@layout BlazoriseLayout
+@layout MainLayout
 
 <LayoutHeader Fixed>
-    <CompanyViewMenu />
+    <WorkersViewMenu />
 </LayoutHeader>
 <LayoutContent>
     @Body
