--- a/src/Client/UseCases/Layout/MainLayout.razor
+++ b/src/Client/UseCases/Layout/MainLayout.razor
@@ -1,11 +1,10 @@
-@* @inherits LayoutComponentBase *@
 @inherits Fluxor.Blazor.Web.Components.FluxorLayout
 
 <Layout Sider>
     <LayoutSider>
         <LayoutSiderContent>
             <div class="sidebar">
-                <BlazoriseMenu />
+                <MainMenu />
             </div>
         </LayoutSiderContent>
     </LayoutSider>
