--- a/src/Client/UseCases/Organization/CompanyLayout.razor
+++ b/src/Client/UseCases/Organization/CompanyLayout.razor
@@ -1,9 +1,8 @@
-@* @inherits LayoutComponentBase *@
 @inherits Fluxor.Blazor.Web.Components.FluxorLayout
-@layout BlazoriseLayout
+@layout MainLayout
 
 <LayoutHeader Fixed>
-    <HomePageMenu />
+    <CompanyViewMenu />
 </LayoutHeader>
 <LayoutContent>
     @Body
