--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -15,6 +15,8 @@
 @using Fluxor
 @using Fluxor.Blazor.Web.Components
 
+@using gRPC.Contracts;
 @using REA.Accounting.Client
-@using ReaAccountingSys.Client.Components.Common
-@using REA.Accounting.Client.Shared
+@using REA.Accounting.Client.Components.Common
+@using REA.Accounting.Client.UseCases.Home
+@using REA.Accounting.Client.UseCases.Layout
