Removed boiler plate files

--- a/src/Client/UseCases/Home/Home.razor
+++ b/src/Client/UseCases/Home/Home.razor
@@ -1,4 +1,8 @@
-﻿<Row TextAlignment=TextAlignment.Center Margin="Margin.Is3.FromTop">
+﻿@page "/"
+
+<PageTitle>Home</PageTitle>
+
+<Row TextAlignment=TextAlignment.Center Margin="Margin.Is3.FromTop">
     <Heading Size="HeadingSize.Is5">
         AdventureWorks Cycles, Back Office System
     </Heading>
