--- a/src/Client/UseCases/HumanResources/Pages/WorkersStartPage.razor
+++ b/src/Client/UseCases/HumanResources/Pages/WorkersStartPage.razor
@@ -1,6 +1,6 @@
 @page "/UseCases/HumanResources/Pages/WorkersStartPage"
 
-<PageTitle>Company</PageTitle>
+<PageTitle>Workers</PageTitle>
 
 <Row TextAlignment=TextAlignment.Center Margin="Margin.Is3.FromTop">
     <Heading Size="HeadingSize.Is5">
