Impl. CompanyStartPage as read only

--- a/src/Client/Components/Common/ReadOnlyDetailsForm.razor
+++ b/src/Client/Components/Common/ReadOnlyDetailsForm.razor
@@ -3,12 +3,9 @@
 <ErrorBoundary>
     <div class="d-flex justify-content-center">
         <div class="col">
-            <Card Margin="Margin.Is4.OnY">
+            <Card Margin="Margin.Is1.OnX">
                 <CardHeader>
-                    <Heading TextColor="TextColor.Dark" Size="HeadingSize.Is6"
-                        Margin="Margin.Is1.FromStart.Is1.FromTop">
-                        @FormTitle
-                    </Heading>
+
                 </CardHeader>
                 <CardBody>
                     <form>
