Begin impl update company details

--- a/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
+++ b/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
@@ -6,7 +6,7 @@
 
 <Row TextAlignment=TextAlignment.Center Margin="Margin.Is3.FromTop">
     <Heading Size="HeadingSize.Is5">
-        AdventureWorks Cycles, Company Details
+        AdventureWorks Cycles, Viewing Company Details
     </Heading>
 </Row>
 
@@ -26,7 +26,7 @@
                 <Tabs SelectedTab="@selectedTab" SelectedTabChanged="@OnSelectedTabChanged" Justified Pills=true>
                 <Items>
                     <Tab Name="generalInfo">General Info</Tab>
-                    <Tab Name="addressInfo">Address</Tab>
+                    <Tab Name="addressInfo">Addresses</Tab>
                     <Tab Name="contactInfo">Contact Info</Tab>
                 </Items>
                 <Content>
