--- a/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
+++ b/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
@@ -9,7 +9,13 @@
         AdventureWorks Cycles, Viewing Company Details
     </Heading>
 </Row>
-
+<div class="container">
+    <div class="row align-items-left">
+        <div class="col-1 align-self-center justify-content-start">
+            <EditResourceLink DoPreNavigationProcessing=@LoadEmployeeLookups />
+        </div>
+    </div>
+</div>
 <ErrorBoundary>
     @if (Loading)
     {
