--- a/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
+++ b/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row align-items-left">
         <div class="col-1 align-self-center justify-content-start">
-            <EditResourceLink DoPreNavigationProcessing=@LoadEmployeeLookups />
+            <EditResourceLink DoPreNavigationProcessing=@GoToUpdateCompanyDetailsPage />
         </div>
     </div>
 </div>
