State mgmt with Fluxor completed for Company display and update pages

--- a/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
+++ b/src/Client/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage.razor
@@ -1,6 +1,6 @@
 @page "/UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage"
 @inherits FluxorComponent
-@using REA.Accounting.Client.Components.Common
+@implements IDisposable
 
 <PageTitle>Company</PageTitle>
 
