--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -10,6 +10,7 @@
 @using Blazorise
 @using Blazorise.Components
 @using Blazorise.DataGrid
+@using Blazorise.FluentValidation
 @using Blazorise.Icons.FontAwesome
 @using Blazorise.Snackbar
 @using Fluxor
