Removing Blazorise datagrid

--- a/src/Client/UseCases/Organization/CompanyViewMenu.razor
+++ b/src/Client/UseCases/Organization/CompanyViewMenu.razor
@@ -8,10 +8,11 @@
                 <BarLink To="UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage">Company</BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage">Departments</BarLink>
+                <BarLink To="UseCases/Organization/DisplayCompanyDepartments/Pages/DisplayCompanyDepartmentsPage">
+                    Departments</BarLink>
             </BarItem>
             <BarItem>
-                <BarLink To="UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage">Shifts</BarLink>
+                <BarLink To=" UseCases/Organization/DisplayCompanyDetails/Pages/CompanyStartPage">Shifts</BarLink>
             </BarItem>
         </BarStart>
         <BarEnd>
