--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -17,7 +17,7 @@
 @using Fluxor.Blazor.Web.Components
 
 @using gRPC.Contracts;
-@using gRPC.Contracts.Organization;
+@using gRPC.Contracts.Organization
 @using REA.Accounting.Client
 @using REA.Accounting.Client.Components.Common
 @using REA.Accounting.Client.UseCases.Home
